--- a/templates/laudo.html
+++ b/templates/laudo.html
@@ -161,36 +161,47 @@
                     <div class="form-group">
                         <label class="col-md-4 control-label">Qual o nível de identificação ?</label>
                         <div class="col-md-4">
+                           
                             <div class="radio">
                                 <label>
                                     <input id="classe" type="radio" name="identificação_pragas" value="Classe">Classe
                                 </label>
+                                <input id="text-class" type="text" name="classe_praga" placeholder="Digite a classe da praga">
                             </div>
+                           
                            <div class="radio">
                                 <label>
                                     <input id="ordem" type="radio" name="identificação_pragas" value="Ordem">Ordem
                                 </label>
+                                    <input id="text-order" type="text" name="ordem_praga" placeholder="Digite a ordem da praga">
                             </div>
+                           
                            <div class="radio">
                                 <label>
                                     <input id="familia" type="radio" name="identificação_pragas" value="Familia">Família
                                 </label>
+                                <input id="text-family" type="text" name="familia_praga" placeholder="Digite a familia da praga">
                             </div>
+                           
                            <div class="radio">
                                 <label>
                                     <input id="genero" type="radio" name="identificação_pragas" value="Genero">Gênero
                                 </label>
+                                <input id="text-gender" type="text" name="genero_praga" placeholder="Digite o genero da praga">
                             </div>
+                           
                            <div class="radio">
                                 <label>
                                     <input id="especie" type="radio" name="identificação_pragas" value="Especie">Espécie
                                 </label>
+                                <input id="text-species" type="text" name="especie_praga" placeholder="Digite a especie da praga">
                             </div>
+                           
                            <div class="radio">
                                 <label>
                                     <input id="popular-name" type="radio" name="identificação_pragas" value="Nome popular">Nome Popular
                                 </label>
-                                <input id="text-name" type="text" name="nome_praga" placeholder="Digite qual é a praga">
+                                <input id="text-name" type="text" name="nome_praga" placeholder="Digite o nome da praga">
                             </div>
 
                         </div>
