--- a/templates/laudo.html
+++ b/templates/laudo.html
@@ -243,8 +243,8 @@
     <script type="text/javascript" src="{{url_for('static', filename='js/jquery-3.1.1.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='js/bootstrapValidator.min.js')}}"></script>
-    <script type="text/javascript" src="{{url_for('static', filename='js/bootstrap-select.min.js')}}"></script>
-    <script type="text/javascript" src="{{url_for('static', filename='defaults-pt_BR.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/bootstrap-select.min.js')}}"></script> 
+    <script type="text/javascript" src="{{url_for('static', filename='js/defaults-pt_BR.min.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='js/laudo-script.js')}}"></script>
 
     </div>
