colocando arquivos online

--- a/templates/laudo.html
+++ b/templates/laudo.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap-theme.min.css')}}">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrapValidator.min.css')}}">
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap-select.min.css')}}">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/css/bootstrap-select.min.css">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/styles.css')}}">
 </head>
 
@@ -243,8 +243,8 @@
     <script type="text/javascript" src="{{url_for('static', filename='js/jquery-3.1.1.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='js/bootstrapValidator.min.js')}}"></script>
-    <script type="text/javascript" src="{{url_for('static', filename='js/bootstrap-select.min.js')}}"></script> 
-    <script type="text/javascript" src="{{url_for('static', filename='js/defaults-pt_BR.min.js')}}"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/bootstrap-select.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/i18n/defaults-pt_BR.min.js"></script>
     <script type="text/javascript" src="{{url_for('static', filename='js/laudo-script.js')}}"></script>
 
     </div>
