--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,6 @@
 <html lang="en">
 
 <head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
     <title>Laudo maker</title>
 
     <!-- Bootstrap Core CSS -->
@@ -17,50 +10,33 @@
     <!-- Custom CSS -->
     <link  rel="stylesheet" href="{{url_for('static', filename='css/business-frontpage.css')}}">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
 
 <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
+
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
                 <a class="navbar-brand" href="#">Laudo Maker</a>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <center>
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="/cadastrar">Cadastrar Cliente</a>
-                    </li>
-                    <li>
-                        <a href="/laudo">Criar Laudo</a>
-                    </li>
-                </ul>
-                </center>
-            </div>
-            <!-- /.navbar-collapse -->
+            <ul class="nav navbar-nav">
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Cliente
+                    <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/cadastrar">Cadastrar Cliente</a></li>
+                        <li><a href="/deletar-cliente">Deletar Cliente</a></li>
+                    </ul>
+                </li>
+                <li><a href="/laudo">Laudo</a></li>
+            </ul>
+
         </div>
-        <!-- /.container -->
+
     </nav>
 
-    <!-- Image Background Page Header -->
-    <!-- Note: The background image is set within the business-casual.css file. -->
     <header class="business-header">
         <div class="container">
             <div class="row">
