projeto final para o trabalho de eng de sw 1

--- a/templates/laudo.html
+++ b/templates/laudo.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap-theme.min.css')}}">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrapValidator.min.css')}}">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/css/bootstrap-select.min.css">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap-select.min.css')}}">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/styles.css')}}">
 </head>
 
@@ -168,42 +168,42 @@
                     <div class="form-group">
                         <label class="col-md-4 control-label">Qual o nível de identificação ?</label>
                         <div class="col-md-4">
-                           
+
                             <div class="radio">
                                 <label>
                                     <input id="classe" type="radio" name="identificação_pragas" value="Classe">Classe
                                 </label>
                                 <input id="text-class" type="text" name="classe_praga" placeholder="Digite a classe da praga">
                             </div>
-                           
+
                            <div class="radio">
                                 <label>
                                     <input id="ordem" type="radio" name="identificação_pragas" value="Ordem">Ordem
                                 </label>
                                     <input id="text-order" type="text" name="ordem_praga" placeholder="Digite a ordem da praga">
                             </div>
-                           
+
                            <div class="radio">
                                 <label>
                                     <input id="familia" type="radio" name="identificação_pragas" value="Familia">Família
                                 </label>
                                 <input id="text-family" type="text" name="familia_praga" placeholder="Digite a familia da praga">
                             </div>
-                           
+
                            <div class="radio">
                                 <label>
                                     <input id="genero" type="radio" name="identificação_pragas" value="Genero">Gênero
                                 </label>
                                 <input id="text-gender" type="text" name="genero_praga" placeholder="Digite o genero da praga">
                             </div>
-                           
+
                            <div class="radio">
                                 <label>
                                     <input id="especie" type="radio" name="identificação_pragas" value="Especie">Espécie
                                 </label>
                                 <input id="text-species" type="text" name="especie_praga" placeholder="Digite a especie da praga">
                             </div>
-                           
+
                            <div class="radio">
                                 <label>
                                     <input id="popular-name" type="radio" name="identificação_pragas" value="Nome popular">Nome Popular
@@ -243,8 +243,8 @@
     <script type="text/javascript" src="{{url_for('static', filename='js/jquery-3.1.1.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='js/bootstrapValidator.min.js')}}"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/bootstrap-select.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/i18n/defaults-pt_BR.min.js"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/bootstrap-select.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/defaults-pt_BR.min.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='js/laudo-script.js')}}"></script>
 
     </div>
